force-app/main/default/objects/Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <label>Comment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Performance Eligibility</fullName>
                </value>
                <value>
                    <fullName>Entrance Age Eligibility</fullName>
                </value>
                <value>
                    <fullName>Extra Documentation Needed</fullName>
                </value>
                <value>
                    <fullName>FCC Notes</fullName>
                </value>
                <value>
                    <fullName>General Comments/Notes</fullName>
                </value>
                <value>
                    <fullName>Grade Level Eligibility</fullName>
                </value>
                <value>
                    <fullName>Homeschool Membership Status Eligibility</fullName>
                </value>
                <value>
                    <fullName>Principal Withdrawal Notes</fullName>
                </value>
                <value>
                    <fullName>Prior School Attendance Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>